First Edits to the page

--- a/tribute_page.html
+++ b/tribute_page.html
@@ -9,6 +9,8 @@
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="css/mystyle.css">
+
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,7 +22,35 @@
 <body>
 
 <!-- codepen from here -->
-<h1>Hello, world!</h1>
+<div class="container-fluid">
+
+<header class="jumbotron bgimage">
+<div class="text-center">
+	<h1>Tribute Page</h1>
+	<h2>Mr. Mahir Çağri</h2>
+</div>	
+</header>
+
+<div class="row">
+<div class="col-md-12">
+<div class="well">
+<h3 class="text-center">The Man whom may have started Social Media by Accident..</h3>
+<div class="row">
+	<div class="col-md-6">
+	<p>Its the late 1990's</p>
+	</div>
+	
+</div>
+<p></p>
+</div>
+</div>
+
+</div>
+
+
+
+
+</div>
 
 
 
