Started to add main body of the tribute_page.html

--- a/tribute_page.html
+++ b/tribute_page.html
@@ -32,12 +32,22 @@
 </header>
 
 <div class="row">
-<div class="col-md-12">
+<div class="col-md-10 col-md-offset-1">
 <div class="well">
 <h3 class="text-center">The Man whom may have started Social Media by Accident..</h3>
 <div class="row">
 	<div class="col-md-6">
-	<p>Its the late 1990's</p>
+	<div class="thumbnail">
+	<div class="caption">
+		<p>In the late 1990's, a Turkish man called Mahir Çağri created his own personal HTML page.
+			That's nothing unusual, but in 1998, The Internet wasn't quite as mainstream as it is now. Using his 
+			best broken English, Mr Çağri put a picture of himself, and a quote "I kiss you." Such affection, and coupled
+			with his picture caused his website to go viral. </p>
+	</div>
+	</div>
+	</div>
+	<div class="col-md-6">
+		<img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/tr/thumb/0/05/Internet_mahir.jpg/250px-Internet_mahir.jpg" alt="picture of Mahir's webpage">
 	</div>
 	
 </div>
