Amendments complete. First edition to be uploaded to Codepen

--- a/tribute_page.html
+++ b/tribute_page.html
@@ -43,16 +43,46 @@
 			That's nothing unusual, but in 1998, The Internet wasn't quite as mainstream as it is now. Using his 
 			best broken English, Mr Çağri put a picture of himself, and a quote "I kiss you." Such affection, and coupled
 			with his picture caused his website to go viral. </p>
+		<p> Within a few days, the webpage had been visited by millions across the world, a huge number of visits
+			for the time. How did things go viral before <em>"Facebook Shares", "PinIt", or "Reddit"</em> ???
+			Well, by word of mouth, and of course, email. Mr. Çağri's website link was copied and forwarded to emails everywhere.</p>
+		<p>Mr. Çağri found instant fame with his site, and was celebrated throughout the world. What was also interesting is that 
+			other people responded, by also uploading their pictures with captions stating "I kiss you" or "I like Sex". No doubt, this lead to the birth of meme's some years later.</p>
+		<p>Whether by accident, or by choice, Mr Çağri therefore prompted the one of the first social media reponses and internet craze at
+			the time.</p>
+
 	</div>
 	</div>
 	</div>
 	<div class="col-md-6">
-		<img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/tr/thumb/0/05/Internet_mahir.jpg/250px-Internet_mahir.jpg" alt="picture of Mahir's webpage">
+		<img class="img-thumbnail" src="https://upload.wikimedia.org/wikipedia/tr/thumb/0/05/Internet_mahir.jpg/250px-Internet_mahir.jpg" alt="picture of Mahir's webpage">
 	</div>
 	
 </div>
-<p></p>
+
 </div>
+<div class="well">
+<div class="row">
+	<div class="col-md-6">
+		<h3>Here's a list of what Mr. Çağri may have started..</h3>
+		<ul>
+			<li>Website's to go Viral.</li>
+			<li>Internet craze, and meme's.</li>
+			<li>Picture Sharing</li>
+			<li>Social Media responses.</li>
+			<li>Love of the Internet.</li>
+		</ul>
+	</div>
+	<div class="col-md-6">
+		<h3>You can see further links here...</h3>
+		<ul>
+			<li><a href="http://www.vanderzande.com/nerdcult/media/Welcome%20to%20my%20home%20page%20!%20Kiss%20you%20!!!!!!!!!!!!_files/index_files/081199.htm" target="_blank">Copy of the original Site</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/Mahir_%C3%87a%C4%9Fr%C4%B1" target="_blank">Mr Çağri's Wiki Page.</a></li>
+		</ul>
+	</div>
+</div>
+</div>
+
 </div>
 
 </div>
