--- a/tribute_page.html
+++ b/tribute_page.html
@@ -32,7 +32,7 @@
 </header>
 
 <div class="row">
-<div class="col-md-10 col-md-offset-1">
+<div class="col-md-8 col-md-offset-2">
 <div class="well">
 <h3 class="text-center">The Man whom may have started Social Media by Accident..</h3>
 <div class="row">
@@ -87,21 +87,14 @@
 
 </div>
 
-
-
-
+<div class="navbar navbar-default navbar-fixed-bottom">
+	<div class="container">
+		<p class="navbar-text navbar-right">FreeCodeCamp Tribute Page by <b>David Dorr</b></p>
+	</div>
+	
 </div>
 
-
-
-
-
-
-
-
-
-
-
+</div>
 
 <!-- finish codepen -->
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
